Changing name back to Pack957

--- a/Pack957/Info.plist
+++ b/Pack957/Info.plist
@@ -14,7 +14,7 @@
 		<string>Icon-Small</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>PackManager</string>
+	<string>Pack957</string>
 	<key>CFBundleVersion</key>
 	<string>0.1</string>
 	<key>MinimumOSVersion</key>
